# ComicsRename

./: .env.example  .gitignore  BILINGUAL_IMPLEMENTATION.md  BUILD_WINDOWS.md  CLEANUP_SUMMARY.md  CROSS_PLATFORM_FIXES.md  ComicsRename.spec  DEPENDENCY_ISSUE_RESOLVED.md  DEVELOPMENT.md  ICON_GUIDE.md  LICENSE  PDF_LOADING_ISSUE_RESOLVED.md  QUICKSTART.md  QUICKVIEW_FINAL_SUMMARY.md  QUICKVIEW_FIXES_SUMMARY.md  QUICKVIEW_INTEGRATION_SUMMARY.md  QUICKVIEW_VERIFICATION_GUIDE.md  QUICK_VIEW_PAN_SUMMARY.md  README-macOS.md  README.md  README_ENHANCEMENT_SUMMARY.md  REFACTORING_COMPLETE.md  RELEASE_v3.3.0.md  SAFERENAME_OPTIMIZATION_COMPLETE.md  SAFE_RENAME_COMPLETELY_FIXED.md  SAFE_RENAME_DEPENDENCIES_RESOLVED.md  SAFE_RENAME_FINAL_STATUS.md  SAFE_RENAME_IMPLEMENTATION.md  SAFE_RENAME_STATUS.md  TRANSLATION_LIST_COMPLETE.md  WINDOWS_EXECUTABLE.md  bdgest_scraper_api.py  build_executable.sh  build_windows.bat  clean_imports.py  cleanup_project 2.py  comicVine_scraper_api.py  comic_renamer_gui.py  comicsFileRenamer_v2.py  comicsFileRenamer_v3.py  (+88 more)
.github/: copilot-instructions.md
.venv-stable/: pyvenv.cfg
core/: __init__.py  album_populator.py  details_formatter.py  error_handler.py  filename_generator.py  folder_renamer.py  image_manager.py  safe_rename_manager.py  search_manager.py  settings_manager.py
dev-tools/: capture_screenshots.py  cleanup_project.py  create_simple_icons.py  extract_strings.py  setup_credentials.py
docs/: AUDIT_REPORT.md  BUG_FIX_ALBUMS_SUMMARY.md  BUG_FIX_MONDE_CORRECTION.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMMIT_SUCCESS_v3.3.1.md  CORRECTIONS_SAFE_RENAME_FORMAT.md  DEBUG_MESSAGES_FIXED.md  DRAG_DROP_SAFERENAME_FIX.md  ENHANCED_CONFIRMATION_DIALOG.md  ERROR_HANDLING_FINAL_SUMMARY.md  FILE_DELETION_FEATURE.md  FOLDER_RENAMING_REFACTOR.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENT_SEARCH_FEEDBACK.md  MARKETING_STRATEGY.md  MODULARIZATION_COMPLETE.md  PAN_LEFT_CLICK_UPDATE.md  PROBLEME_MONDE_RESOLUTION.md  PROJECT_ANALYSIS_REPORT.md  QIMAGE_SAVE_FIX.md  QT_ENUM_FIXES_COMPLETE.md  QUICK_ACTION_PLAN.md  QUICK_VIEW_PAN_SUMMARY.md  REFACTORING_PHASE1_COMPLETE.md  REFACTORING_PLAN_PHASE2.md  REFACTORING_SUCCESS_REPORT.md  RELEASE_v3.3.2.md  RELEASE_v3.5.0.md  SAFERENAME_CACHE_FIX.md  SAFERENAME_ENHANCEMENT_SUMMARY.md  SAFERENAME_OPTIMIZATION.md  SAFERENAME_OPTIMIZATION_FINAL.md  SAFE_RENAME_DRAG_DROP_FIX.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  UI_ERROR_FIX.md  UNIFICATION_RENOMMAGE_FINAL.md  _config.yml  index.html  (+2 more)
icons/: preview.html
screenshots/: README.md
scripts/: refactor_remove_duplicates.py
tests/: debug_quickview.py  test_album_details.py  test_bdgest_cancellation.py  test_bilingual.py  test_comicvine_fix.py  test_delete_file.py  test_folder_rename.py  test_icons.py  test_layout_reorganization.py  test_quick_view_fixes.py  (+9 more)
ui/: dialogs.py  (+4 more)
(+18 files in other folders)
