[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comicsrename"
version = "3.2.0"
description = "A powerful GUI application for organizing and renaming comic book files using metadata from BDGest and ComicVine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ComicsRename Contributors"}
]
maintainers = [
    {name = "ComicsRename Contributors"}
]
keywords = [
    "comics",
    "metadata",
    "bdgest",
    "comicvine",
    "file-organization",
    "gui",
    "pyside6"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.4.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/your-username/ComicsRename"
Repository = "https://github.com/your-username/ComicsRename.git"
Issues = "https://github.com/your-username/ComicsRename/issues"
Documentation = "https://github.com/your-username/ComicsRename/blob/main/README.md"

[project.scripts]
comicsrename = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["test*", "__pycache__*", "*.pyc"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.env.example"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | \.venv
  | venv
  | env
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
